setup/samples/manifests/sb-bench/sb-bench-ing-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sb-bench
spec:
  rules:
  - host: sb-bench.k8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        # pathType: ImplementationSpecific
        backend:
          service:
            name: sb-bench
            port:
              number: 80
